--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   },
   "homepage": "https://github.com/dpress13/udemy-mailchimp-newsletter-signup#readme",
   "devDependencies": {
-    "express": "^4.17.1",
     "nodemon": "^2.0.11"
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.53",
-    "request": "^2.88.2"
+    "express": "^4.17.1"
   }
 }
